--- a/index.html
+++ b/index.html
@@ -75,19 +75,22 @@
 
     <!--homepage-->
   
-
-    <section id="banner" class="d-flex align-items-center justify-content-center text-center text-white">
-      <div class="overlay"></div> <!-- Overlay for blur effect -->
-      <div class="container position-relative">
-        <h1 class="display-1 fw-bold">TELEHEALTH</h1>
-        <p class="fs-3 fst-italic mx-auto" style="max-width: 800px;">
-          “Any Time, Any Place, Telehealth.”        </p>
-        <div class="banner-btn">
-          <a href="login.html" class="btn btn-dark btn-lg me-3">Login</a>
-          <a href="register.html" class="btn btn-dark btn-lg me-3">Register Now</a>
+   <div id="banner">
+      <img src="bunch.jpeg" alt="Banner Image">
+      <section class="d-flex text-center text-white">
+        <div class="overlay"></div>
+        <div class="container position-relative">
+          <h1 class="display-1 fw-bold">TELEHEALTH</h1>
+          <p class="fs-3 fst-italic mx-auto" style="max-width: 800px;">
+            “Any Time, Any Place, Telehealth.”
+          </p>
+          <div class="banner-btn">
+            <a href="login.html" class="btn btn-dark btn-lg me-3">Login</a>
+            <a href="register.html" class="btn btn-dark btn-lg me-3">Register Now</a>
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
+    </div>
 
      <!-- Featurettes Section -->
   <section id="featurettes" class="py-5">
