--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <!--homepage-->
   
    <div id="banner">
-      <img src="bunch.jpeg" alt="Banner Image">
+      <img src="img/bunch.jpeg" alt="Banner Image">
       <section class="d-flex text-center text-white">
         <div class="overlay"></div>
         <div class="container position-relative">
