--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   
 <div id="banner">
     <img src="img/bunch.jpeg" alt="Banner Image">
-    <section class="d-flex text-center text-white">
+    <section class="d-flex text-center text-black">
       <div class="overlay"></div>
       <div class="container position-relative">
         <h1 class="display-1 fw-bold">TELEHEALTH</h1>
