--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
     <!--homepage-->
   
 <div id="banner">
+    <img src="img/bunch.jpeg" alt="Banner Image">
     <section class="d-flex text-center text-black">
       <div class="overlay"></div>
       <div class="container position-relative">
