--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <img src="img/bunch.jpeg" alt="Banner Image">
     <section class="d-flex text-center text-black">
       <div class="overlay"></div>
-      <div class="container position-relative">
+      <div class="container position-absolute">
         <h1 class="display-1 fw-bold">TELEHEALTH</h1>
         <p class="fs-3 fst-italic mx-auto" style="max-width: 800px;">
           “Any Time, Any Place, Telehealth.”
